sizing fix
Fixed some layout issues introduced in 2.3

--- a/popup.css
+++ b/popup.css
@@ -7,7 +7,7 @@ body {
 		background:white;
 }
 textarea {
-  width:434px;
+  width:474px;
   height:100px;
 		resize:vertical;
 }
